Fixed post edit form z-index

--- a/public_html/css/post.css
+++ b/public_html/css/post.css
@@ -150,7 +150,7 @@
 	position: absolute;
 	background: rgba(255, 255, 255, 0.8);
 	box-shadow: 0 0 1em 0.5em rgba(255, 255, 255, 0.8);
-	z-index: 0;
+	z-index: 1;
 	display: none;
 }
 #post-view>* {
